llvm/test/tools/llvm-dwp/X86/overflow_debug_info_v4.test.manual
RUN: llvm-mc --triple=x86_64-unknown-linux --filetype=obj --split-dwarf-file=debug_info_v4.dwo -dwarf-version=4 %p/../Inputs/overflow/debug_info_v4.s -o debug_info_v4.o
RUN: llvm-mc --triple=x86_64-unknown-linux --filetype=obj --split-dwarf-file=main_v4.dwo -dwarf-version=4 %p/../Inputs/overflow/main_v4.s -o main_v4.o
RUN: not llvm-dwp debug_info_v4.dwo main_v4.dwo -o overflow.dwp 2>&1 | FileCheck %s
CHECK: error: {{.*}} Section Contribution Offset overflow 4G. Previous Offset {{.*}}, After overflow offset {{.*}}.
